--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "type-check": "tsx --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write .",
+    "format": "prettier --write .ts,.tsx",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -40,6 +40,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "lefthook": "^2.1.0",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   }
